--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,10 +25,10 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.1"
+
 [prune]
   go-tests = true
   unused-packages = true
-
-[[constraint]]
-  name = "github.com/sirupsen/logrus"
-  version = "1.0.5"
